Fixed V1 The White Council being usable more than twice.